--- a/examples/tutorial/basic-1/package.json
+++ b/examples/tutorial/basic-1/package.json
@@ -15,5 +15,8 @@
   },
   "scripts": {
     "test": "anchor test --skip-lint"
+  },
+  "dependencies": {
+    "@project-serum/anchor": "^0.25.0"
   }
 }
